fixed button spacing on main page and button color and hover effects.

--- a/style.css
+++ b/style.css
@@ -79,13 +79,15 @@ h3, h4 {
 	padding-bottom: 50px;
 }
 #scroll-txt-p {
-	padding-bottom: 20px;
+	padding-top: 20px;
 }
 .block {
 	display: inline;
 	margin: none;
 }
-
+.navy {
+	padding-top: 50px;
+}
 section{
 	margin: 0px 0px 0px 0px;
 }
@@ -129,31 +131,28 @@ section{
 
 /* /////////// links hover ETC Atributes ///////// */
 /* unvisited link */
-a:link {
-	color: white;
-  }
-  
-  /* visited link */
-  a:visited {
+a {
 	color: white;
   }
   
   /* mouse over link */
   a:hover {
-	color: rgb(107, 202, 155);
+	color: rgb(16, 243, 27);
   }
   
   /* selected link */
   a:active {
-	color: rgb(16, 243, 27);
+	color:;
   }
 
 
 /* /////////// font awesome styling ///// */
-
+i:hover {
+	color: rgb(52, 235, 19);
+}
 i {
 	color: rgb(52, 235, 19);
-	font-size: 60px;
+	/* font-size: 60px; */
 	padding-left: 30px;
 	padding-right: 30px;
 }
@@ -271,40 +270,47 @@ p {
 	background: none;
 	padding: 15px;
 }
+.werk {
+	padding-right: 20px;
+}
+.con {
+	padding-left: 20px;
+}
+
+.square_btn2 {
+	display: inline-block;
+	text-decoration: none;
+	background-image: none;
+    background-image: none;
+	padding: 25px 20px;
+	border: 8px solid;
+	border-color: rgb(16, 243, 27);
+	border-radius: 50px;
+	width: 360px;
+	color: white;
+	font-size: 30px;
+}
+.square_btn2:hover {
+	border-color: white;
+	color: rgb(52, 235, 19);
+
+}
 
 .square_btn{
-    display: inline-block;
-    padding: 7px 20px;
-	border-radius: 25px;
-    text-decoration: none;
-    color: #FFF;
-    background-image: -webkit-linear-gradient(45deg, #FFC107 0%, #ff8b5f 100%);
-    background-image: linear-gradient(45deg, #FFC107 0%, #ff8b5f 100%);
-    transition: .4s;
-}
-
-.square_btn:hover {
-    background-image: -webkit-linear-gradient(45deg, #FFC107 0%, #f76a35 100%);
-    background-image: linear-gradient(45deg, #FFC107 0%, #f76a35 100%);
-}
-/* .square_btn{
 	display: inline-block;
-    width: 200px;
-	border-radius: 25px;
-	font-size: 22px;
-	border: 5px solid;
-	border-color:white;
-    background-image: none;
 	text-decoration: none;
-	background: none;
-    transition: 2s;
-    color: rgb(52, 235, 19);
-	padding: 7px 20px;
+	background-image: none;
+    background-image: none;
+	padding: 25px 20px;
+	border: 8px solid;
+	border-color: rgb(16, 243, 27);
+	border-radius: 50px;
+	width: 300px;
+	color: white;
+	font-size: 30px;    
 }
 
 .square_btn:hover {
-    background-image: rgb(52, 235, 19);
-	background: rgb(52, 235, 19);
-    transition: 2s;
-    color: white;
-} */
+	border-color: white;
+	color:rgb(52, 235, 19);	
+}
